--- a/ygodeck.css
+++ b/ygodeck.css
@@ -1,11 +1,35 @@
-body
-{
-    background: #cccccc;
-}
+html, body { margin: 0; height: 100%; width: 100%; }
+body { background: #cccccc; }
 
 body > div { display: none; }
 body.import > div#import-ydk { display: block; }
 body.view > div.deck { display: block; }
+
+div#import-ydk
+{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 200px;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+div#ydk-container
+{
+    display: inline-block;
+    background: #aaaaaa;
+    border: 4px solid #777777;
+    border-radius: 8px;
+    padding: 15px;
+}
+div#import-ydk, div#import-ydk *
+{
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 30px;
+}
 
 div.deck
 {
@@ -43,11 +67,27 @@ div#zoom-image > img
 
 div#zoom-name
 {
+    cursor: default;
+    margin-top: 5px;
+    padding: 3px;
+    padding-left: 5px;
+    font-family: Verdana, Geneva, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background: #999999;
+    border-radius: 5px;
 }
 
 div#zoom-text
 {
+    cursor: default;
     white-space: pre-wrap;
+    margin-top: 1px;
+    padding: 3px;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 13px;
+    background: #999999;
+    border-radius: 5px;
 }
 
 div#main-deck
@@ -110,7 +150,6 @@ div.card
     height:   14vh;
     cursor: zoom-in;
 }
-
 div.card.selected { cursor: zoom-out; }
 
 div.card > img
