--- a/modals.css
+++ b/modals.css
@@ -42,3 +42,46 @@ div#modal-settings
     width: 400px;
     height: 600px;
 }
+div#modal-settings switch { float: right; }
+
+div#modal-settings > div
+{
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 15px;
+    line-height: 30px;
+    vertical-align: middle;
+}
+
+div.switch
+{
+    display: inline-block;
+    position: relative;
+    width: 50px;
+    height: 30px;
+}
+
+div.switch > div.switch-bar
+{
+    background: linear-gradient(to right, #006699 0%, #006699 50%, #aaaaaa 50%, #aaaaaa 100%);
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    top: 7px;
+    bottom: 7px;
+    border: 1px solid #333333;
+    border-radius: 8px;
+}
+
+div.switch > div.switch-button
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    background: #787878;
+    transition: left 0.2s ease;
+}
+
+div.switch.enabled > div.switch-button { left: 20px; }
