--- a/ygodeck.css
+++ b/ygodeck.css
@@ -43,6 +43,7 @@ div#zoom-viewer
     background: #aaaaaa;
     border: 4px solid #777777;
     border-radius: 8px;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 div.deck
@@ -65,42 +66,6 @@ div#toolbox
     margin-left: 53vh;
     overflow-y: auto;
     overflow-x: hidden;
-}
-
-div#zoom-image
-{
-    text-align: center;
-}
-div#zoom-image > img
-{
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 3%;
-}
-
-div#zoom-name
-{
-    cursor: default;
-    margin-top: 5px;
-    padding: 3px;
-    padding-left: 5px;
-    font-family: Verdana, Geneva, sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-    background: #999999;
-    border-radius: 5px;
-}
-
-div#zoom-text
-{
-    cursor: default;
-    white-space: pre-wrap;
-    margin-top: 1px;
-    padding: 3px;
-    font-family: Verdana, Geneva, sans-serif;
-    font-size: 13px;
-    background: #999999;
-    border-radius: 5px;
 }
 
 div#main-deck
