--- a/modals.css
+++ b/modals.css
@@ -51,7 +51,6 @@ div#modal-settings > div
     line-height: 30px;
     vertical-align: middle;
 }
-
 div.switch
 {
     display: inline-block;
@@ -59,7 +58,6 @@ div.switch
     width: 50px;
     height: 30px;
 }
-
 div.switch > div.switch-bar
 {
     background: linear-gradient(to right, #006699 0%, #006699 50%, #aaaaaa 50%, #aaaaaa 100%);
@@ -71,7 +69,6 @@ div.switch > div.switch-bar
     border: 1px solid #333333;
     border-radius: 8px;
 }
-
 div.switch > div.switch-button
 {
     position: absolute;
@@ -83,5 +80,29 @@ div.switch > div.switch-button
     background: #787878;
     transition: left 0.2s ease;
 }
-
 div.switch.enabled > div.switch-button { left: 20px; }
+
+div#modal-about, div#modal-privacy
+{
+    width: 700px;
+    height: 600px;
+}
+div#modal-about > div, div#modal-privacy > div
+{
+    white-space: pre-wrap;
+    
+    font-family: Monospace;
+    
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    right: 15px;
+    bottom: 15px;
+    padding: 10px;
+    background: #cccccc;
+}
+div#modal-about > div > b
+{
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 15px;
+}
