--- a/ygodeck.css
+++ b/ygodeck.css
@@ -8,6 +8,7 @@ body.view > div.deck, body.view > div#toolbox, body.view > div#zoom-viewer { dis
 
 div#import-ydk
 {
+    cursor: default;
     position: absolute;
     left: 0;
     right: 0;
@@ -25,12 +26,27 @@ div#ydk-container
     border: 4px solid #777777;
     border-radius: 8px;
     padding: 15px;
+    text-align: center;
 }
-div#import-ydk, div#import-ydk *
+div#ydk-container, div#ydk-container > input
 {
     font-family: Verdana, Geneva, sans-serif;
     font-size: 30px;
 }
+div#ydk-subtext
+{
+    margin-top: 10px;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 12px;
+    color: #999999;
+}
+div#ydk-subtext > a
+{
+    cursor: pointer;
+    text-decoration: underline;
+    color: #000000;
+}
+div#ydk-subtext > a:hover { text-decoration: underline overline dotted }
 
 div#zoom-viewer
 {
